--- a/Rimozione/config.json
+++ b/Rimozione/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MTA4Nzc4NDA0OTIxMDI5NDQyNQ.G-iaT7.nau7_xLmRnBXbcL82deOnndPeb9P3Hgrdu4vfg",
+  "token": "//",
   "clientID": "1087784049210294425",
   "database": {
     "host": "localhost",
